add nullSafety to these rules