@@ -37,11 +37,13 @@ public class JMapRules {
      * @return a {@link Rule} checking if the map is not empty.
      */
     public static <K, V> Rule<Map<K, V>> notEmpty() {
-        return map -> {
-            if (map == null) return Validation.invalid(ErrorMessage.of("must.not.be.null"));
-            if (map.isEmpty()) return Validation.invalid(ErrorMessage.of("must.not.be.empty"));
-            return Validation.valid(map);
-        };
+        return Rule.notNull().and(map -> {
+            if (map.isEmpty()) {
+                return Validation.invalid(ErrorMessage.of("must.not.be.empty"));
+            } else {
+                return Validation.valid(map);
+            }
+        });
     }
 
     /**
@@ -60,11 +62,13 @@ public class JMapRules {
      * @return a {@link Rule} checking for the presence of the key.
      */
     public static <K, V> Rule<Map<K, V>> containsKey(K key) {
-        return map -> {
-            if (map == null) return Validation.invalid(ErrorMessage.of("must.not.be.null"));
-            if (map.containsKey(key)) return Validation.valid(map);
-            return Validation.invalid(ErrorMessage.of("must.contain.key", "key", key));
-        };
+        return Rule.notNull().and(map -> {
+            if (map.containsKey(key)) {
+                return Validation.valid(map);
+            } else {
+                return Validation.invalid(ErrorMessage.of("must.contain.key", "key", key));
+            }
+        });
     }
 
     /**
@@ -77,19 +81,21 @@ public class JMapRules {
      *     <li>{@code keys}: the set of required keys ({@link Set})</li>
      * </ul>
      *
-     * @param <K> the type of keys in the map.
-     * @param <V> the type of values in the map.
+     * @param <K>  the type of keys in the map.
+     * @param <V>  the type of values in the map.
      * @param keys the required keys.
      * @return a {@link Rule} checking for the presence of all specified keys.
      */
     @SafeVarargs
     public static <K, V> Rule<Map<K, V>> containsKeys(K... keys) {
         Set<K> keySet = HashSet.of(keys);
-        return map -> {
-            if (map == null) return Validation.invalid(ErrorMessage.of("must.not.be.null"));
-            if (map.keySet().containsAll(keySet.toJavaSet())) return Validation.valid(map);
-            return Validation.invalid(ErrorMessage.of("must.contain.keys", "keys", keySet));
-        };
+        return Rule.notNull().and(map -> {
+            if (map.keySet().containsAll(keySet.toJavaSet())) {
+                return Validation.valid(map);
+            } else {
+                return Validation.invalid(ErrorMessage.of("must.contain.keys", "keys", keySet));
+            }
+        });
     }
 
     /**
@@ -107,18 +113,21 @@ public class JMapRules {
      * @return a {@link Rule} checking that all values in the map are non-null.
      */
     public static <K, V> Rule<Map<K, V>> valuesNotNull() {
-        return map -> {
+        return Rule.notNull().and(map -> {
             if (map == null) return Validation.invalid(ErrorMessage.of("must.not.be.null"));
-            Set<K> keysWithNulls = HashSet.ofAll(map.entrySet().stream()
-                    .filter(entry -> entry.getValue() == null)
-                    .map(Map.Entry::getKey)
-                    .collect(Collectors.toList()));
+            Set<K> keysWithNulls = HashSet.ofAll(
+                    map.entrySet()
+                            .stream()
+                            .filter(entry -> entry.getValue() == null)
+                            .map(Map.Entry::getKey)
+                            .toList()
+            );
             if (keysWithNulls.nonEmpty()) {
                 return Validation.invalid(ErrorMessage.of("must.not.contain.null.values", "keys", keysWithNulls));
             } else {
                 return Validation.valid(map);
             }
-        };
+        });
     }
 
     /**
@@ -126,6 +135,9 @@ public class JMapRules {
      * <p>
      * If any value fails the rule, the resulting validation will contain errors with paths
      * corresponding to the keys of the failing values.
+     * <p>
+     * Usage example:
+     * {@snippet file = "net/vanfleteren/fv/rules/collections/JMapRulesSnippets.java" region = "validate-values-with-example"}
      *
      * @param <K>  the type of keys in the map.
      * @param <V>  the type of values in the map.
@@ -133,7 +145,7 @@ public class JMapRules {
      * @return a {@link Rule} that validates all map values.
      */
     public static <K, V> Rule<Map<K, V>> validateValuesWith(Rule<? super V> rule) {
-        return map -> {
+        return Rule.notNull().and(map -> {
             var validations = map.entrySet().stream().map(entry ->
                     rule.test(entry.getValue())
                             .mapErrors(errors ->
@@ -147,7 +159,7 @@ public class JMapRules {
             } else {
                 return Validation.valid(map);
             }
-        };
+        });
     }
 
 }
